# clinical-trail-matcher

./: .gitignore  Dockerfile  README.md  SUBMISSION_REPORT.json  baseline.py  client.py  generate_rl_dataset.py  inference.py  models.py  openenv.yaml  pyproject.toml  rl_proof_1000.py  run_final_submission.py  validate.py
docs/research/: CHECKLIST.md  DEPLOYMENT.md  PRESENTATION.md  PROJECT_SUMMARY.md  SIMPLE_ANSWER.md  SINGLE_VS_MULTI_STEP.md  VISUAL_COMPARISON.md
server/: Dockerfile  __init__.py  app.py  data_generator.py  environment.py  graders.py  pytorch_agent.py  requirements.txt
server/static/: index.html
