[project]
name = "clinical_trial_matcher"
version = "1.0.0"
description = "Clinical Trial Matcher Environment for OpenEnv"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "requests==2.31.0",
    "python-multipart==0.0.6",
    "torch>=2.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
